# askapsoft

Code/Base/accessors/current/: dependencies.default
Code/Base/askap/current/: dependencies.default
Code/Base/askapparallel/current/: dependencies.default
Code/Base/casa-components/current/: build.py  dependencies.default
Code/Base/casa-components/current/components/ComponentModels/test/: CMakeLists.txt  tConstantSpectrum.cc  tFluxStandard.cc  tFluxStandard2.cc  tSkyCompRep.cc  tSpectralIndex.cc  tTabularSpectrum.cc
Code/Base/casa-components/current/components/SpectralComponents/test/: CMakeLists.txt  tGaussianMultipletSpectralElement.cc  tLorentzianSpectralElement.cc  tProfileFit1D.cc  tSpectralFit.cc
Code/Base/components/current/: dependencies.default
Code/Base/daliuge/current/: .clean_targets  .sconsign.dblite  NO_BUILD  SConstruct  askap_daliuge.cc  askap_daliuge.os  dependencies.default  doxy.conf.tmp  init_package_env.sh  package.info
Code/Base/imagemath/current/: dependencies.default
Code/Base/parallelframework/current/: dependencies.default
Code/Base/scimath/current/: dependencies.darwin  dependencies.default
Code/Components/Utilities/current/: dependencies.default
Code/Components/swc-utils/current/: dependencies.default
Code/Components/swcorrelator/current/: dependencies.default
Code/Interfaces/slice/current/: CP.ice  SkyModelService.ice  SkyModelServiceCriteria.ice  (+1 more)
Code/Systems/cpapps/: dependencies.default
Tools/Dev/testutils/: SConstruct
Tools/cookiecutter_templates/sdp-service-template/: README.md  cookiecutter.json
(+422 files in other folders)
